# REIC

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  streamlit_app.py
benchmarks/: compare.py
data/: dev.json  ontology.json  test.json  train.json
docs/: comparison.md  compliance.md  data.md  flow.md  structure.md
notebooks/: finetune_and_compare.ipynb
reic/: __init__.py  index.py  models.py  ontology.py  pipeline.py  reranker.py  retriever.py
reic/baselines/: __init__.py  bert_classifier.py  llm_classifier.py  qwen_classifier.py  roberta_classifier.py
scripts/: build_index.py  split_ontology_data.py  train_baselines.py
